# plan_sist_cogn

./: README.md
.github/workflows/: master.yaml
arq_sw_rb_ros2/is/ejercicio1/: CMakeLists.txt  package.xml
arq_sw_rb_ros2/is/ejercicio1/launch/: ejercicio1_launch.py
arq_sw_rb_ros2/is/ejercicio1/src/: proceso_1.cpp  proceso_2.cpp  proceso_3.cpp
arq_sw_rb_ros2/is/practica_msgs/: package.xml
arq_sw_rb_ros2/is/practica_msgs/srv/: GetPoseStamped.srv  GetString.srv
arq_sw_rb_ros2/jc/practica/: CMakeLists.txt  package.xml
arq_sw_rb_ros2/jc/practica/launch/: practica_launch.py
arq_sw_rb_ros2/jc/practica/src/: proceso_1.cpp  proceso_2.cpp  proceso_3.cpp
arq_sw_rb_ros2/jc/practica_msgs/: CMakeLists.txt  package.xml
arq_sw_rb_ros2/jc/practica_msgs/srv/: GetString.srv
arq_sw_rb_ros2/mk/practica_msgs/: CMakeLists.txt
arq_sw_rb_ros2/mk/practica_ros2/practica_msgs/: package.xml
arq_sw_rb_ros2/mk/practica_ros2/practica_msgs/srv/: GetPoseStamped.srv  GetString.srv
arq_sw_rb_ros2/mk/practica_ros2/taller/: CMakeLists.txt  package.xml
arq_sw_rb_ros2/mk/practica_ros2/taller/launch/: process_launch.py
arq_sw_rb_ros2/mk/practica_ros2/taller/src/: proceso_3.cpp
arq_sw_rb_ros2/mk/taller/src/: proceso_1.cpp  proceso_2.cpp
arq_sw_rb_ros2/nj/practica_msgs/: CMakeLists.txt  package.xml
arq_sw_rb_ros2/nj/practica_msgs/srv/: GetPoseStamped.srv  GetString.srv
arq_sw_rb_ros2/nj/taller/: CMakeLists.txt  package.xml
arq_sw_rb_ros2/nj/taller/launch/: launcher.py
arq_sw_rb_ros2/nj/taller/src/: proceso_1.cpp  proceso_2.cpp  proceso_3.cpp
blackboard/: README.md
blackboard/blackboard/: CMakeLists.txt  package.xml
blackboard/blackboard/include/blackboard/: BlackBoard.hpp  BlackBoardClient.hpp  BlackBoardInterface.hpp  BlackBoardNode.hpp
blackboard/blackboard/src/: blackboard_main.cpp
blackboard/blackboard/src/blackboard/: BlackBoard.cpp  BlackBoardClient.cpp  BlackBoardNode.cpp
blackboard/blackboard/test/: blackboard_node_test.cpp  blackboard_test.cpp
blackboard/blackboard_msgs/: CMakeLists.txt  package.xml
blackboard/blackboard_msgs/msg/: Entry.msg
blackboard/blackboard_msgs/srv/: ExistEntry.srv  ExistParent.srv  GetEntry.srv  GetKeyParents.srv  RemoveEntry.srv  RemoveParent.srv
bt_house_nav/: CMakeLists.txt  README.md  package.xml
bt_house_nav/launch/: bt_house_nav_launch.py
bt_house_nav/pddl/: commands  house_nav_domain.pddl
cognitive_arch/: CMakeLists.txt  README.md  package.xml
cognitive_arch/config/: params.yaml
cognitive_arch/fsm/: ca_HFSM.bica  ca_HFSM.cpp  ca_HFSM.hpp
cognitive_arch/include/cognitive_arch/: Explore.hpp  Move.hpp  Sync.hpp
cognitive_arch/launch/: cognitive_launch.py
cognitive_arch/pddl/: cognitive_arch_domain.pddl  commands
cognitive_arch/rviz/: cognitive_arch_config.rviz
cognitive_arch/src/: blackboard_init.cpp  ca_HFSMImpl.cpp  explore_action.cpp  move_action.cpp  sync_node.cpp
cognitive_arch/src/cognitive_arch/: Explore.cpp  Move.cpp  Sync.cpp
house_nav/: CMakeLists.txt  README.md  package.xml
house_nav/config/: params.yaml
house_nav/include/house_nav/: Controller.hpp  Move.hpp  Pick.hpp  Place.hpp
house_nav/launch/: house_launch.py  house_nav_launch.py
house_nav/pddl/: commands  house_nav_domain.pddl
house_nav/src/: enter_zone_action_node.cpp  house_nav.cpp  house_nav_controller_node.cpp  leave_zone_action_node.cpp  move_between_rooms_action_node.cpp  move_between_zones_action_node.cpp  pick_action_node.cpp  place_action_node.cpp
house_nav/src/house_nav/: Controller.cpp  Move.cpp  Pick.cpp  Place.cpp
planners/FF-X/: README.md  ff  treasures_domain.pddl  treasures_problem.pddl
planners/Plan-A/: README.md
planners/colin-clp/: README.md  travel_domain.pddl  travel_problem.pddl
planners/hsp_p/: README.md
planners/lpg-td-1.0/: README.md
planners/lpg_td_1.0/: README.md
planners/metric-ff/: README.md
planners/metric_ff/: README.md  metric_ff
planners/mips-xxl/: README.md
planners/mips_xxl/: README.md
planners/optic-clp/: README.md
scan_fake/: CMakeLists.txt  README.md  package.xml
scan_fake/include/scan_fake/: ScanFakePublisher.hpp  ScanFakeSubscriber.hpp
scan_fake/launch/: practica_1_launch.py  proceso_1_launch.py  proceso_launch.py
scan_fake/src/: practica_1.cpp  proceso.cpp  proceso_1.cpp
scan_fake/src/scan_fake/: ScanFakePublisher.cpp  ScanFakeSubscriber.cpp
