<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cognitive_arch</name>
  <version>0.0.0</version>
  <description>cognitive_arch package</description>
  
  <maintainer email="mgilpensado@gmail.com">marinagilpen</maintainer>
  <maintainer email="jc.manzanares.serrano@gmail.com">Juancams</maintainer>
  <maintainer email="noel.jimenez.gar@gmail.com">noel215</maintainer>
  <maintainer email="i.cebolladagracia@gmail.com">isacg5</maintainer>

  <license>Apache License, Version 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend> 
  <depend>rclcpp_cascade_lifecycle</depend>
  <depend>lifecycle_msgs</depend>
  <depend>plansys2_executor</depend>
  <depend>plansys2_domain_expert</depend>
  <depend>plansys2_problem_expert</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>rclcpp_action</depend>
  <depend>geometry_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>plansys2_msgs</depend>
  <depend>blackboard</depend>
  <depend>blackboard_msgs</depend>
  <depend>octomap_msgs</depend>
  <depend>octomap</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
